Added Footer, Added form, edited a bit.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left">Vaibhav Tiwari</div>
             <div class="right">
                 <ul>
-                    <li><a href="/">Home</a></li>
+                    <li><a href="#top">Home</a></li>
                     <li><a href="/">About Me</a></li>
                     <li><a href="/">Projects</a></li>
                     <li><a href="/">Contact Me</a></li>
@@ -26,7 +26,7 @@
     </header>
 
     <main>
-        <section class="firstSection">
+        <section class="firstSection" id="top">
             <div class="leftSection">Hi, I am <span class="purple">Vaibhav</span>
                 <div>I am a passionate </div>
                 <span id="element"></span>
@@ -38,7 +38,8 @@
                 <img src="assests/bg.png" alt="background image">
             </div>
         </section>
-                    <hr>
+        <hr class="hr1">
+
         <section class="secondSection">
             <span class="text-grey">What I have done so far.</span>
             <h1>Skills</h1>
@@ -59,15 +60,52 @@
             </div>
         </section>
 
-        <hr>
+        <hr class="hr2">
 
         <footer class="footer">
-            <div class="footer-first">
-                Vaibhav Tiwari
+            <div class="footer-right">
+                <h1>Vaibhav Tiwari's Portfolio</h1>
+                <br>
+                <span class="text-grey">Connect on Social Media.</span>
+                <div>
+                    <ul>
+                        <div class="images">
+                            <li>
+                                <a href="https://www.instagram.com/vaibhav_tiw/" target="_blank">
+                                     <img src="assests/ig2.png" alt="Instagram">
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://twitter.com/Vaibhav_Tiw" target="_blank">
+                                    <img src="assests/twitter.png" alt="Twitter">
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://www.linkedin.com/in/vaibhav-tiw/" target="_blank">
+                                    <img src="assests/linkedin.png" alt="LinkedIn">
+                                </a>
+                            </li>
+
+                            <li>
+                                <a href="https://github.com/VaibhavTiw" target="_blank">
+                                    <img src="assests/git.png" alt="GitHub">
+                                </a>
+                            </li>
+
+                        </div>  
+                    </ul>
+                </div>
             </div>
-            <div class="footer-sec"></div>
-            <div class="footer-third"></div>
-            <div class="footer-four"></div>
+
+            <div class="footer-left">
+                <input type="text" name="" id="" placeholder="Name">
+                <input type="email" name="" id="" placeholder="Email">
+                <input type="text" name="" id="" placeholder="Phone">
+                <input type="submit" name="" id="">
+            </div>
+            
         </footer>
     </main>
 
