Modified and added styling to the buttons.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
                 <div>I am a passionate </div>
                 <span id="element"></span>
                 <br>
-                <button class="button">Download Resume</button>
-                <button class="button">GitHub</button>
+                <div class="button">
+                    <a href="assests/resume-vt.pdf" download="">
+                        <button class="btn"> Download Resume</button>
+                    </a>
+                    <a href="https://github.com/VaibhavTiw" target="_blank">
+                        <button class="btn">GitHub</button>
+                    </a>
+                </div>
             </div>
             <div class="rightSection">
                 <img src="assests/bg.png" alt="background image">
