added link to resume button.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <span id="element"></span>
                 <br>
                 <div class="button">
-                    <a href="assests/resume-vt.pdf" download="">
+                    <a href="https://drive.google.com/file/d/1pu_ObTQBqa5PlnRlUTUQ5kCdenK7wqGN/view?usp=sharing" target="_blank" download="">
                         <button class="btn"> Download Resume</button>
                     </a>
                     <a href="https://github.com/VaibhavTiw" target="_blank">
