--- a/index.html
+++ b/index.html
@@ -1,122 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vaibhav's Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="left">Vaibhav Tiwari</div>
-            <div class="right">
-                <ul>
-                    <li><a href="#top">Home</a></li>
-                    <li><a href="/">About Me</a></li>
-                    <li><a href="/">Projects</a></li>
-                    <li><a href="/">Contact Me</a></li>
-                </ul>
-            </div>
-        </nav>
+      <nav>
+        <div class="left">Vaibhav Tiwari</div>
+        <div class="right">
+          <ul>
+            <li><a href="#top">Home</a></li>
+            <li><a href="/">About Me</a></li>
+            <li><a href="/">Projects</a></li>
+            <li><a href="/">Contact Me</a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <main>
-        <section class="firstSection" id="top">
-            <div class="leftSection">Hi, I am <span class="purple">Vaibhav</span>
-                <div>I am a passionate </div>
-                <span id="element"></span>
-                <br>
-                <div class="button">
-                    <a href="https://drive.google.com/file/d/1pu_ObTQBqa5PlnRlUTUQ5kCdenK7wqGN/view?usp=sharing" target="_blank" download="">
-                        <button class="btn"> Download Resume</button>
-                    </a>
-                    <a href="https://github.com/VaibhavTiw" target="_blank">
-                        <button class="btn">GitHub</button>
-                    </a>
-                </div>
-            </div>
-            <div class="rightSection">
-                <img src="assests/bg.png" alt="background image">
-            </div>
-        </section>
-        <hr class="hr1">
+      <section class="firstSection" id="top">
+        <div class="leftSection">
+          Hi, I am <span class="purple">Vaibhav</span>
+          <div>I am a passionate</div>
+          <span id="element"></span>
+          <br />
+          <div class="button">
+            <a
+              href="https://drive.google.com/file/d/1pu_ObTQBqa5PlnRlUTUQ5kCdenK7wqGN/view?usp=sharing"
+              target="_blank"
+              download=""
+              id="downloadBtn"
+            >
+              <button class="btn">Download Resume</button>
+            </a>
+            <a href="https://github.com/VaibhavTiw" target="_blank">
+              <button class="btn">GitHub</button>
+            </a>
+          </div>
+        </div>
+        <div class="rightSection">
+          <img src="assests/bg.png" alt="background image" />
+        </div>
+      </section>
+      <hr class="hr1" />
 
-        <section class="secondSection">
-            <span class="text-grey">What I have done so far.</span>
-            <h1>Skills</h1>
+      <section class="secondSection">
+        <span class="text-grey">What I have done so far.</span>
+        <h1>Skills</h1>
 
-            <div class="box">
-                <div class="vertical">
-                    <div class="vertical-title">Web Developer</div>
-                    <div class="vertical-desc">Freelancer</div>
-                </div>
-                <div class="vertical">
-                    <div class="vertical-title"></div>
-                    <div class="vertical-desc"></div>
-                </div>
-                <div class="vertical">
-                    <div class="vertical-title"></div>
-                    <div class="vertical-desc"></div>
-                </div>
-            </div>
-        </section>
+        <div class="box">
+          <div class="vertical">
+            <div class="vertical-title">Web Developer</div>
+            <div class="vertical-desc">Freelancer</div>
+          </div>
+          <div class="vertical">
+            <div class="vertical-title"></div>
+            <div class="vertical-desc"></div>
+          </div>
+          <div class="vertical">
+            <div class="vertical-title"></div>
+            <div class="vertical-desc"></div>
+          </div>
+        </div>
+      </section>
 
-        <hr class="hr2">
+      <hr class="hr2" />
 
-        <footer class="footer">
-            <div class="footer-right">
-                <h1>Vaibhav Tiwari's Portfolio</h1>
-                <br>
-                <span class="text-grey">Connect on Social Media.</span>
-                <div>
-                    <ul>
-                        <div class="images">
-                            <li>
-                                <a href="https://www.instagram.com/vaibhav_tiw/" target="_blank">
-                                     <img src="assests/ig2.png" alt="Instagram">
-                                </a>
-                            </li>
+      <footer class="footer">
+        <div class="footer-right">
+          <h1>Vaibhav Tiwari's Portfolio</h1>
+          <br />
+          <span class="text-grey">Connect on Social Media.</span>
+          <div>
+            <ul>
+              <div class="images">
+                <li>
+                  <a
+                    href="https://www.instagram.com/vaibhav_tiw/"
+                    target="_blank"
+                  >
+                    <img src="assests/ig2.png" alt="Instagram" />
+                  </a>
+                </li>
 
-                            <li>
-                                <a href="https://twitter.com/Vaibhav_Tiw" target="_blank">
-                                    <img src="assests/twitter.png" alt="Twitter">
-                                </a>
-                            </li>
+                <li>
+                  <a href="https://twitter.com/Vaibhav_Tiw" target="_blank">
+                    <img src="assests/twitter.png" alt="Twitter" />
+                  </a>
+                </li>
 
-                            <li>
-                                <a href="https://www.linkedin.com/in/vaibhav-tiw/" target="_blank">
-                                    <img src="assests/linkedin.png" alt="LinkedIn">
-                                </a>
-                            </li>
+                <li>
+                  <a
+                    href="https://www.linkedin.com/in/vaibhav-tiw/"
+                    target="_blank"
+                  >
+                    <img src="assests/linkedin.png" alt="LinkedIn" />
+                  </a>
+                </li>
 
-                            <li>
-                                <a href="https://github.com/VaibhavTiw" target="_blank">
-                                    <img src="assests/git.png" alt="GitHub">
-                                </a>
-                            </li>
+                <li>
+                  <a href="https://github.com/VaibhavTiw" target="_blank">
+                    <img src="assests/git.png" alt="GitHub" />
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </div>
+        </div>
 
-                        </div>  
-                    </ul>
-                </div>
-            </div>
-
-            <div class="footer-left">
-                <input type="text" name="" id="" placeholder="Name">
-                <input type="email" name="" id="" placeholder="Email">
-                <input type="text" name="" id="" placeholder="Phone">
-                <input type="submit" name="" id="">
-            </div>
-            
-        </footer>
+        <div class="footer-left">
+          <form action="" method="post">
+            <div><input type="text" name="" id="" placeholder="Name" /></div>
+            <div><input type="email" name="" id="" placeholder="Email" /></div>
+            <div><input type="text" name="" id="" placeholder="Phone" /></div>
+            <div><input type="submit" name="" id="submit" /></div>
+          </form>
+        </div>
+      </footer>
     </main>
 
-    
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
