Edited the color pallete a bit.

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="footer-right">
           <h1>Vaibhav Tiwari's Portfolio</h1>
           <br />
-          <span class="text-grey">Connect on Social Media.</span>
+          <span class="text2-grey">Connect on Social Media.</span>
           <div>
             <ul>
               <div class="images">
@@ -121,6 +121,7 @@
 
         <div class="footer-left">
           <form action="" method="post">
+            <div class="form-head">Lets get in touch.</div>    
             <div><input type="text" name="" id="" placeholder="Name" /></div>
             <div><input type="email" name="" id="" placeholder="Email" /></div>
             <div><input type="text" name="" id="" placeholder="Phone" /></div>
