--- a/index.html
+++ b/index.html
@@ -61,19 +61,65 @@
 
         <div class="box">
           <div class="vertical">
-            <div class="vertical-title">Web Developer</div>
-            <div class="vertical-desc">Freelancer</div>
+            <div class="vertical-title">Class X</div>
+            <div class="vertical-desc">CBSE(2019)</div>
           </div>
           <div class="vertical">
-            <div class="vertical-title"></div>
-            <div class="vertical-desc"></div>
+            <div class="vertical-title">Class XII</div>
+            <div class="vertical-desc">CBSE(2021)</div>
           </div>
           <div class="vertical">
-            <div class="vertical-title"></div>
-            <div class="vertical-desc"></div>
+            <div class="vertical-title">B.Tech CSE</div>
+            <div class="vertical-desc">KIIT Bhubaneswar(2025)</div>
           </div>
         </div>
       </section>
+
+      <hr class="hr1" />
+
+      <section class="thirdSection">
+        
+        <span class="text-grey hello">What I have done so far.</span>
+        <h1>Projects</h1>
+
+        <div class="cards12">
+          <div id="cont">
+            <div class="card">
+              <img class="cardimg" src="assests/bg.png" alt="">
+              <span class="tag">Project1</span>
+              <span class="tag">Project</span>
+              <div class="name">Weather App</div>
+              <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa voluptate cumque ut nisi nem</p>
+              <button class="cardbtn">Link</button>
+            </div>
+          </div>
+
+          <div id="cont">
+            <div class="card">
+              <img class="cardimg" src="assests/bg.png" alt="">
+              <span class="tag">Project1</span>
+              <span class="tag">Project</span>
+              <div class="name">Weather App</div>
+              <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa voluptate cumque ut nisi nem</p>
+              <button class="cardbtn">Link</button>
+            </div>
+          </div>
+
+          <div id="cont">
+            <div class="card">
+              <img class="cardimg" src="assests/bg.png" alt="">
+              <span class="tag">Project1</span>
+              <span class="tag">Project</span>
+              <div class="name">Weather App</div>
+              <p class="content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa voluptate cumque ut nisi nem</p>
+              <button class="cardbtn">Link</button>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+
 
       <hr class="hr2" />
 
